looks like working

--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
     Your machine ID:
     <script> document.write(remote.getGlobal('machineID')) </script>
     <br>
+
     <span>OS: </span>
     <script> document.write(remote.getGlobal('os')) </script>
     <br>
-    <script> document.write(remote.getGlobal('lol')) </script>
+
+    <span>First event type: </span>
+    <script> document.write(remote.getGlobal('something')) </script>
+    <br>
+
+    <span>Second event type: </span>
+    <script> document.write(remote.getGlobal('something2')) </script>
+    <br>
 </h1>
 </body>
 </html>
